# pydantic-settings-test-demo

./: README.md  pyproject.toml
pydantic_settings_demo/: settings.py
tests/: test_a.py
