[tool.poetry]
name = "pydantic-settings-demo"
version = "0.1.0"
description = ""
authors = ["Michael Wooley <william.wooley@motional.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
